--- a/Signup&Login/signup.css
+++ b/Signup&Login/signup.css
@@ -21,19 +21,20 @@
   width: 98%;
   margin: auto;
 }
-#logobox > div {
+.boxes {
   height: 70%;
-  width: 44%;
+  width: 42%;
   margin: auto;
   margin-right: 40px;
 }
 #fb {
-  height: 90%;
-  width: 50%;
+  /* height: 90%; */
+  /* width: 50%; */
   border: 2px solid rgb(73, 73, 212);
   display: flex;
   color: rgb(13, 13, 189);
   line-height: 5px;
+  margin-left: 5px;
 }
 #fb > img {
   height: 30px;
@@ -44,9 +45,10 @@
   border: 2px solid rgb(182, 13, 13);
   display: flex;
   color: rgb(182, 13, 13);
-  height: 100%;
+  /* height: 100%; */
   width: 99%;
   line-height: 5px;
+  margin-top: 7px;
 }
 #google > img {
   height: 30px;
@@ -60,6 +62,8 @@
   width: 50%;
   margin: auto;
   margin-top: 20px;
+  gap: 15px;
+  justify-content: center;
 }
 hr {
   color: black;
