--- a/Home/styles/home.css
+++ b/Home/styles/home.css
@@ -5,7 +5,7 @@
 
 
 .Show_the_space{
-    margin-top: 3%;
+    margin: 2% 0;
     width: 100%;
     height: 4px;
     background-color: rgba(51, 51, 51, 0.452);
@@ -14,16 +14,162 @@
 
 
 /* Nav Bar Section Css */
-
 #Nav_bar_main{
-    width: 99.8%;
-    height: 100px;
+font-family: "Helvetica Neue",Helvetica,Arial;
+    position: absolute;
+    top: 0;
+    position: fixed;
+    background-color: #fff;
+    width: 100%;
+    z-index: 2;
+    padding-bottom: 10px;
+}
+
+.nav_bar_all{
+    width: 82%;
+    margin: auto;
+}
+
+.firstSectionOfNavBar{
+    display:flex;
+    justify-content: end;
+    align-items: center;
+    gap: 25px;
+
+}
+
+.firstSectionOfNavBar > a{
+    text-decoration: none;
+    color: #2c4152;
+    font-size: 12px;
+    font-weight: 100;
+}
+
+.firstSectionOfNavBar > .visitedib{
+    color: #FAFAFA;
+    font-size: 12px;
+    padding: 10px;
+    background-color: black;
+}
+
+
+.secondsectionnavbar {
+    display: flex;
+    gap: 10px;
+    justify-content: end;
+}
+
+.logo_img_div{
+    width: 65%;
+}
+
+.logo_img_div > img{
+    width: 100%;
+}
+
+
+
+.right_side_div {
+    display: flex;
+    gap: 40px;
+    align-items: end;
+    justify-content: end;
+}
+
+
+.text_div_secon_nav > p{
+    color: #2c4152;
+    font-size: 15px;
+}
+
+.input_serach_div_secon_nav {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+
+.input_div_nav_bar {
+    width: 60%;
+    background-color: #fffded;
+    padding: 7px 10px;
+    border-radius: 20px 20px  ; 
     border: 1px solid black;
 }
+
+.input_div_nav_bar > input{
+    width: 90%;
+    border: none;
+    background-color: transparent;
+    font-size: 13px;
+}
+
+.input_div_nav_bar > input:focus, .input_div_nav_bar > textarea:focus, .input_div_nav_bar > select:focus{
+    outline: none;
+    font-size: 14px;
+}
+
+.icon_hanger{
+    width: 2%;
+}
+
+.icon_hanger > img{
+    width: 100%;
+}
+
+
+
+.icon-bag-hang {
+    background-color:#2c4152;
+    padding: 10px;
+    border-radius:50%;
+    width:4%;
+    text-align: center;
+    margin-left: 10px;
+    height: 60%;
+}
+
+.icon-bag-hang  > img{
+    width: 100%;
+    color: #FAFAFA;
+}
+
+.icon-bag-hang > i{
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Nav Bar Section Css end*/
 
+#first_section{
+    margin-top: 6%;
+}
 
 
 .sameimgsamdiv > img{
@@ -56,18 +202,6 @@
 }
 
 
-/* First section css end*/
-
-
-
-/* Second section css */
-
-
-/* Second section css end*/
-
-
-/* four section css */
-
 
 #Four_section{
     width: 100%;
@@ -80,14 +214,6 @@
     width: 50%;
     overflow: hidden;
 }
-
-/* four section css end*/
-
-
-
-/* Fith section css */
-
-/* Fith section css end*/
 
 
 .silder_no_hover{
@@ -121,7 +247,7 @@
 
 
 .Fous_img_inDiv > div{
-    width: 24%;
+    width: 25%;
 }
 
 
@@ -146,11 +272,42 @@
     margin-top: 5px;
 }
 
-/* 
+
 .section_21{
     display: flex;
 }
 
 .section_21 > div{
     width: 40%;
-} */
+} 
+
+
+
+
+
+
+ 
+
+#icon_div {
+    font-family: sans-serif;
+    padding: 30px 0;
+    background-color: #FAFAFA;
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+
+
+#icon_div > .icons > i{
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+#icon_div > .icons > p{
+    font-size: 20px;
+    font-weight: 700;
+}
