--- a/product page/productcss/product.css
+++ b/product page/productcss/product.css
@@ -1,12 +1,14 @@
-*, :after, :before {
+#main, :after, :before {
     box-sizing: border-box;
 }
-*{
+#main{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    margin-top: 6%;
 }
 .scprodhead{
+    position:fixed;
     background-color: #e8f8ff;
     width: 100%;
     height: 50px;
@@ -14,6 +16,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    z-index: 1;
 }
 .scprodspan1{
     display: inline-block;
@@ -48,6 +51,7 @@
     color: #939393;
     font-size: 11px;
     float: left;
+    margin-top: 4%;
     margin-bottom: 20px;
     display: block;
     width: 100%;
