--- a/Home/styles/home.css
+++ b/Home/styles/home.css
@@ -5,7 +5,7 @@
 
 
 .Show_the_space{
-    margin: 2% 0;
+    margin: 3% 0% 1% 0%;
     width: 100%;
     height: 4px;
     background-color: rgba(51, 51, 51, 0.452);
