--- a/Main.css
+++ b/Main.css
@@ -15,10 +15,13 @@
         padding-bottom: 10px;
     
     }
-    
+    button{
+        cursor: pointer;
+    }
     .nav_bar_all{
         width: 82%;
         margin: auto;
+        cursor: pointer;
     }
     
     .firstSectionOfNavBar{
@@ -185,7 +188,7 @@
       display: none;
     }
     
-    .icon_bag_div:hover  .addtocartnavbardiv{
+    .icon_bag_div:hover .addtocartnavbardiv{
         display: block;
         background-color: #fafafa;
         margin: 10px;
@@ -197,6 +200,13 @@
 
     }
 
+    #emptry_bag{
+        display: none;
+        width: 100%;
+    }
+    #emptry_bag > img{
+        width: 100%;
+    }
     .showthehangerdiv{
         display: none;
     }
@@ -285,6 +295,9 @@
         color: #414141;
     }
     
+    .derop_ul_li_same >  ul > a > li:hover{
+        text-decoration: underline;
+    }
     
     
     
@@ -350,6 +363,10 @@
         margin-top: 12px;
         color:#ccc;
         font-size: 13px;
+    }
+
+    .div_footer > ul > a >li:hover{
+        text-decoration: underline;
     }
 
     .second_div {
