--- a/product page/productcss/product.css
+++ b/product page/productcss/product.css
@@ -198,6 +198,7 @@
     height: 15px;
     margin-right: 2px;
     background-color:#c4c4c4 ;
+    cursor: pointer;
 }
 .scsortsort{
     display: flex;
@@ -282,6 +283,7 @@ padding-top: 2%;
        grid-template-columns: auto auto;
        justify-content: left;
        grid-gap: 5px;
+     
    }
    .fiftycolor{
     color: #333;
@@ -311,3 +313,32 @@ padding-top: 2%;
 /* #screfineid::before{
     display: none;
 } */
+
+
+
+
+
+#icon_div {
+    margin-top: 2%;
+    font-family: sans-serif;
+    padding: 30px 0;
+    background-color: #FAFAFA;
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+
+
+#icon_div > .icons > i{
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+#icon_div > .icons > p{
+    font-size: 20px;
+    font-weight: 700;
+}
