--- a/Main.css
+++ b/Main.css
@@ -119,7 +119,7 @@ button {
 }
 
 .input_suggestion_div {
-  box-shadow: rgb(255, 255, 255) 0px 20px 25px -5px,
+  box-shadow: rgba(223, 223, 223, 0.808) 0px 20px 25px -5px,
     rgb(255, 255, 255) 0px 10px 10px -5px;
   position: absolute;
   width: 16%;
