--- a/views/product page/productjackets.ejs
+++ b/views/product page/productjackets.ejs
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./productcss/product.css">
+    <link rel="stylesheet" href="css/productcss/product.css">
 
     <title>Jackets & Coats</title>
 </head>
@@ -440,11 +440,9 @@
       <p>ASSURED QUALITY</p>
     </div>
   </div>
-
 <footer></footer>
-
 </body>
 </html>
-<script type = "module" src = "./navbar.js"></script>
-<script src="jacketcoat.js">
+<script type = "module" src = "/navbar.js"></script>
+<script src="scripts/productscripts/jacketcoat.js">
 </script>
