--- a/views/product page/productwomenjeans.ejs
+++ b/views/product page/productwomenjeans.ejs
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./productcss/product.css">
+    <link rel="stylesheet" href="css/productcss/product.css">
 
     <title>Women Jeans</title>
     
@@ -447,5 +447,5 @@
 </body>
 </html>
 <script type = "module" src = "../navbar.js"></script>
-<script src="womenjeans.js">
+<script src="scripts/productscripts/productwomenjeans.js">
 </script>
