--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
       <div id="sixth_silder" onclick="gotowoen()">
         <div class="Sixth_silder_div single-item">
           <div class="silder_no_hover">
-            <img src="Images/sic the section slider/1.jpg" alt="" />
+            <img src="/app/upload/1642497420197-220070304-imgsrc" alt="" />
           </div>
           <div class="silder_no_hover">
             <img src="Images/sic the section slider/2.jpg" alt="" />
