--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
       </div>     
       <div id="first_section" onclick="gotomen()">
         <div class="frist_section_img sameimgsamdiv">
-          <img src="Images/fiest section.jpg" alt="" />
+          <img src="https://ajio-clone-full.herokuapp.com/app/public/1642499428013-97876915-imgsrc" alt="" />
         </div>
       </div>
 
