--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,10 +29,9 @@
       </div>     
       <div id="first_section" onclick="gotomen()">
         <div class="frist_section_img sameimgsamdiv">
-          <img src="https://ajio-clone-full.herokuapp.com/app/public/1642499428013-97876915-imgsrc" alt="" />
+          <img src="Images/fiest section.jpg" alt="" />
         </div>
       </div>
-
       <div id="Second_section" onclick="gotowoen()">
         <div class="Second_section_img sameimgsamdiv">
           <img src="Images/second section.jpg" alt="" />
