--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
       </div>     
       <div id="first_section" onclick="gotomen()">
         <div class="frist_section_img sameimgsamdiv">
-          <img src="Images/fiest section.jpg" alt="" />
+          <img src="upload/1642502070312-928198159.jpeg" alt="" />
         </div>
       </div>
       <div id="Second_section" onclick="gotowoen()">
