--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,9 +29,10 @@
       </div>     
       <div id="first_section" onclick="gotomen()">
         <div class="frist_section_img sameimgsamdiv">
-          <img src="upload/1642502070312-928198159.jpeg" alt="" />
+          <img src="Images/fiest section.jpg" alt="" />
         </div>
       </div>
+
       <div id="Second_section" onclick="gotowoen()">
         <div class="Second_section_img sameimgsamdiv">
           <img src="Images/second section.jpg" alt="" />
