--- a/views/product page/productjackets.ejs
+++ b/views/product page/productjackets.ejs
@@ -443,6 +443,6 @@
 <footer></footer>
 </body>
 </html>
-<script type = "module" src = "../navbar.js"></script>
-<script src="scripts/productscripts/jeans.js">
+<script type = "module" src = "/navbar.js"></script>
+<script src="scripts/productscripts/jacketcoat.js">
 </script>
