--- a/views/product page/productjackets.ejs
+++ b/views/product page/productjackets.ejs
@@ -7,14 +7,14 @@
     <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="./Main.css">
+    <link rel="stylesheet" href="/Main.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/d829865ea3.js"
       crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/productcss/product.css">
+    <link rel="stylesheet" href="/css/productcss/product.css">
 
     <title>Jackets & Coats</title>
 </head>
@@ -444,5 +444,5 @@
 </body>
 </html>
 <script type = "module" src = "/navbar.js"></script>
-<script src="scripts/productscripts/jacketcoat.js">
+<script src="/scripts/productscripts/jacketcoat.js">
 </script>
