--- a/views/product page/productjeans.ejs
+++ b/views/product page/productjeans.ejs
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/productcss/product.css">
+    <link rel="stylesheet" href="/css/productcss/product.css">
 
     <title>Jeans</title>
 </head>
@@ -445,6 +445,6 @@
 </body>
 </html>
 <script type = "module" src = "/navbar.js"></script>
-<script src="scripts/productscripts/jeans.js">
+<script src="/scripts/productscripts/jeans.js">
 
 </script>
