--- a/views/product page/productjeans.ejs
+++ b/views/product page/productjeans.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Main.css">
     <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +14,7 @@
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/productcss/product.css">
+    <link rel="stylesheet" href="/Main.css">
 
     <title>Jeans</title>
 </head>
