--- a/views/product page/productwomenjeans.ejs
+++ b/views/product page/productwomenjeans.ejs
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="../Main.css">
+    <link rel="stylesheet" href="/Main.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/d829865ea3.js"
       crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/productcss/product.css">
+    <link rel="stylesheet" href="/css/productcss/product.css">
 
     <title>Women Jeans</title>
     
@@ -28,7 +28,7 @@
 
     <div class="scprodhead">
     <div>
-        <img src="/prodimg/bbs-image.svg" alt="Sale is Live">
+        <!-- <img src="/prodimg/bbs-image.svg" alt="Sale is Live"> -->
     </div>
 <div class="scprodsale" >Big Bold Sale is live</div>
 <span class="scprodspan1"></span>
@@ -446,6 +446,6 @@
 <footer></footer>
 </body>
 </html>
-<script type = "module" src = "../navbar.js"></script>
-<script src="scripts/productscripts/productwomenjeans.js">
+<script type = "module" src = "/navbar.js"></script>
+<script src="/scripts/productscripts/womenjeans.js">
 </script>
