womensjeans_error resolved

--- a/views/product page/productwomenjeans.ejs
+++ b/views/product page/productwomenjeans.ejs
@@ -28,7 +28,7 @@
 
     <div class="scprodhead">
     <div>
-        <!-- <img src="/prodimg/bbs-image.svg" alt="Sale is Live"> -->
+        <img src="/Images/prodimg/bbs-image.svg" alt="Sale is Live">
     </div>
 <div class="scprodsale" >Big Bold Sale is live</div>
 <span class="scprodspan1"></span>
