--- a/views/EachProduct/one_Product.ejs
+++ b/views/EachProduct/one_Product.ejs
@@ -91,7 +91,7 @@
             </div>
         
             <div class="add_to_bag">
-                <button id="addtobagnewata">
+                <button id="addtobagnewata" onclick="productid('<%= JSON.stringify(p[0]._id)%>')">
                     <i style="margin-right: 10px;" class="fas fa-shopping-bag"></i>
                     ADD TO BAG
                 </button>
