--- a/views/Signup&Login/login.ejs
+++ b/views/Signup&Login/login.ejs
@@ -93,7 +93,7 @@ console.log('data:', data)
 if(data.error === true){
     alert("User Not Exist");
 } else{
-//    goinghomepag();
+   goinghomepag();
 }
         
 }
