--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
       <div id="Eight_silder " onclick="gotomen()">
         <div class="Eight_silder_div single-item">
           <div class="silder_no_hover">
-            <img src="viwes/Images/eight Section Silder/1.jpg" alt="" />
+            <img src="/Images/eight Section Silder/1.jpg" alt="" />
           </div>
           <div class="silder_no_hover">
             <img src="Images/eight Section Silder/2.jpg" alt="" />
