--- a/public/css/login&sinupcss/signup.css
+++ b/public/css/login&sinupcss/signup.css
@@ -1,6 +1,11 @@
 * {
   font-family: sans-serif;
 }
+
+button{
+  cursor: pointer;
+}
+
 #main {
   border: 1px solid rgb(68, 67, 67);
   height: 600px;
