--- a/views/Closet/index.ejs
+++ b/views/Closet/index.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
     <script src="https://kit.fontawesome.com/d829865ea3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../Main.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/Main.css">
+    <link rel="stylesheet" href="/css/closte/style.css">
     <title>Closet | AJIO</title>
     
 </head>
@@ -44,6 +44,6 @@
     
 </body>
 
-<script type="module" src="../navbar.js"></script>
-<script src="./closet.js"></script>
+<script type="module" src="/navbar.js"></script>
+<script src="/scripts/closte/closet.js"></script>
 </html>
