--- a/views/mybag/cart1.ejs
+++ b/views/mybag/cart1.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
-    <link rel="stylesheet" href="../Main.css">
+    <link rel="stylesheet" href="/Main.css">
     <script
       src="https://kit.fontawesome.com/d829865ea3.js"
       crossorigin="anonymous"
@@ -14,10 +14,9 @@
     
     <link
       rel="stylesheet"
-      type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="./cart.css">
+    <link rel="stylesheet" href="/css/mybagcss/cart.css">
     <title>
       Ajio.com | Shop Online the Latest Fashion in apparels brands in India |
       Reliance Ajio.com
@@ -30,14 +29,14 @@
     </div>
     
     <div id="odiv">
-        <img id="img1" src="mybagbanner.jpg">
+        <img id="img1" src="/mybagbanner.jpg">
     </div>
     
     <div id="bag">
         <div id="Mybag">My Bag</div>
         <div id="Closet">+ Add From Closet</div>
     </div>
-    <script src="cart.js">
+    <script src="/scripts/mybagjs/cart.js">
 
     </script>
 
@@ -48,6 +47,6 @@
 
 </html>
 
-<script type="module" src = "../navbar.js">
+<script type="module" src = "/navbar.js">
   
 </script>
