--- a/views/EachProduct/one_Product.ejs
+++ b/views/EachProduct/one_Product.ejs
@@ -99,7 +99,7 @@
             </div>
         
             <div class="Save_the_clostes">
-                <button id="savetoclotes"> <i style="margin-right: 10px;" class="fas fa-tshirt"></i>  SAVE TO CLOSET</button>
+                <button id="savetoclotes" onclick="addtocloste('<%= JSON.stringify(p[0]._id)%>')"> <i style="margin-right: 10px;" class="fas fa-tshirt"></i>  SAVE TO CLOSET</button>
             </div>
         
             <div class="Products_delails">
