--- a/views/mybag/cart1.ejs
+++ b/views/mybag/cart1.ejs
@@ -36,17 +36,23 @@
         <div id="Mybag">My Bag</div>
         <div id="Closet">+ Add From Closet</div>
     </div>
-    <script src="/scripts/mybagjs/cart.js">
-
-    </script>
-
-<footer></footer>
-</body>
-
-
-
-</html>
-
+    <!-- <footer></footer> -->
+    
 <script type="module" src = "/navbar.js">
   
 </script>
+<!-- <footer></footer> -->
+
+
+</body>
+<script src="/scripts/mybagjs/cart.js">
+
+</script>
+
+<!-- <footer></footer> -->
+
+</html>
+
+<!-- <script type="module" src = "/navbar.js">
+  
+</script> -->
