--- a/views/mybag/cart1.ejs
+++ b/views/mybag/cart1.ejs
@@ -25,6 +25,8 @@
 
 <body>
 
+  <div id="bodydemio" >
+
     <div id="Nav_bar_main">
     </div>
     
@@ -36,23 +38,11 @@
         <div id="Mybag">My Bag</div>
         <div id="Closet">+ Add From Closet</div>
     </div>
-    <!-- <footer></footer> -->
-    
-<script type="module" src = "/navbar.js">
-  
-</script>
-<!-- <footer></footer> -->
 
-
+  </div>
+  <footer></footer>
 </body>
-<script src="/scripts/mybagjs/cart.js">
-
-</script>
-
-<!-- <footer></footer> -->
+<script type="module" src = "/navbar.js"></script>
+<script src="/scripts/mybagjs/cart.js"></script>
 
 </html>
-
-<!-- <script type="module" src = "/navbar.js">
-  
-</script> -->
