--- a/views/mybag/address1.ejs
+++ b/views/mybag/address1.ejs
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
-  <link rel="stylesheet" href="../Main.css">
+  <link rel="stylesheet" href="/Main.css">
 
   <script
   src="https://kit.fontawesome.com/d829865ea3.js"
   crossorigin="anonymous"
 ></script>
 
-<link rel="stylesheet" href="./payment.css" />
+<link rel="stylesheet" href="/css/mybagcss/payment.css" />
   
     <title></title>
     <style>
@@ -171,7 +171,8 @@ button{
 }
 #num2{
     height:30px;
-    /* border :1px solid black; */
+    display: flex;
+    justify-content: space-between;
     width:260px;
     margin:auto;
     padding-top: 5px;
@@ -181,7 +182,8 @@ button{
 }
 #num3{
     height:20px;
-    /* border :1px solid black; */
+    display: flex;
+    justify-content: space-between;
     width:260px;
     margin:auto;
     padding-top: 5px;
@@ -255,8 +257,8 @@ footer{
 
     <footer></footer>
 </body>
-<script type="module" src="../navbar.js"></script>
+<script type="module" src="/navbar.js"></script>
 </html>
-<script src="address.js">
+<script src="/scripts/mybagjs/address.js">
 </script>
 
