--- a/views/mybag/payment.ejs
+++ b/views/mybag/payment.ejs
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
-    <link rel="stylesheet" href="../Main.css">
+    <link rel="stylesheet" href="/Main.css">
     <script
       src="https://kit.fontawesome.com/d829865ea3.js"
       crossorigin="anonymous"
     ></script>
     
-    <link rel="stylesheet" href="./payment.css" />
+    <link rel="stylesheet" href="/css/mybagcss/payment.css" />
     <title>
       Ajio.com | Shop Online the Latest Fashion in apparels brands in India |
       Reliance Ajio.com
@@ -117,16 +117,16 @@
                 <div class="oder_delrails">
                     <p>Order Details</p>
                     <div class="amount_span">
-                        <p>Bag total</p><p id="Bag-total">Rs. 25,630.00</p>
+                        <p>Bag total</p><p id="Bag-total">Rs. 0.00</p>
                     </div>
                     <div class="amount_span">
-                        <p>Bag discount</p><p id="Bag-discount">Rs. 25,630.00</p>
+                        <p>Bag discount</p><p id="Bag-discount" style="text-decoration: line-through ;color: #B09975;"> Rs. 0.00</p>
                     </div>
                     <div class="amount_span">
                         <p>Delivery</p><p>FREE</p>
                     </div>
                     <div class="amount_span">
-                        <p class="amount">Total Amount</p><p class="amount2">Rs. 17,092.00</p>
+                        <p class="amount">Total Amount</p><p class="amount2">Rs. 0.00</p>
                     </div>
                 </div>
             </div>
@@ -138,6 +138,6 @@
 
     <footer></footer>
   </body>  
-  <script type="module" src="../navbar.js"></script>
-  <script src="payment.js"></script>
+  <script type="module" src="/navbar.js"></script>
+  <script src="/scripts/mybagjs/payment.js"></script>
 </html>
