--- a/views/product page/productjeans.ejs
+++ b/views/product page/productjeans.ejs
@@ -405,8 +405,8 @@
          <div class="scsortgridgrid">SORT BY</div>
 
          <select name="" id="scselect" >
-             <option value="What's New" id="new">What's New</option>
-             <option value="Relevance" id="relevance">Relevance</option>
+             <option value="What's New" id="new">Latest</option>
+             <option value="Relevance" id="relevance">Alphabetical</option>
              <option value="Discount" id="discount">Discount</option>
              <option value="Price(highest first)" id="high">Price(highest first)</option>
              <option value="Price(lowest first)" id="low">Price(lowest first)</option>
